# GroundCrew

./: .gitignore  LICENSE  NEXT_FIXES_FOR_NEI.md  README.md  TCC_OBSERVABILITY.md  demo.py  env.template  eval_fever.py  fever_evaluation_results_4omini.json  main.py  pyproject.toml  setup.sh
evals/: README.md  fever_evaluation_results_4o.json  fever_wiki_only_results.json  test_nei_improvements.py
examples/: advanced_config.py  batch_check.py  simple_check.py  tcc_metadata_example.py  url_scraping.py
groundcrew/: __init__.py  agents.py  config.py  models.py  workflow.py
tests/: __init__.py  test_imports.py  test_models.py
wiki/: API-Reference.md  Architecture.md  Development.md  Evaluation.md  Examples.md  Getting-Started.md  Home.md  Troubleshooting.md  Usage-Guide.md
